--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -23,3 +23,10 @@ a1 {
 .btn-lg.round {
 	border-radius: 24px;
 }
+
+body.home {
+  background-color: #E6ECF0;
+}
+
+.navigation-top {
+  background-color: #47BDC1;
