--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -8,7 +8,7 @@
 }
 
 .homebackground {
-  background-image: url('background.jpg');
+  background-image: asset_url('background.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
 }
