--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -49,7 +49,7 @@ body.home {
   display: block;
 }
 
-div.boolean, .simple_form input[type='submit'] {
+.simple_form input[type='submit'] {
   float: right;
   background-color: #1DA1F2;
   color: white;
@@ -60,4 +60,10 @@ div.boolean, .simple_form input[type='submit'] {
 
 .messagedelete {
 float: right;
+}
+
+.messagetime {
+font-size: 10px;
+padding-bottom: 8px;
+color: #657786;
 }
