--- a/app/views/tweets/home.html.erb
+++ b/app/views/tweets/home.html.erb
@@ -41,7 +41,13 @@
       <div class="card">
         <div class="card-body">
           <h4 class="card-title">Profile</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+          <p class="card-text">
+            <%= @user.name %><br>
+            <%= @user.birthday %><br>
+            <%= @user.bio %><br>
+            <%= @user.country %>
+            <br><br>
+            <%= link_to 'Edit Profile', edit_user_registration_path, method: :get%>
           </p>
         </div>
       </div>
@@ -51,16 +57,15 @@
       <div class="align-items-center centerblock">
         <div class="card">
           <div class="card-body">
-            <%= simple_form_for @tweet do |f| %>
-            <%= f.input :message, :placeholder => "What's happening?", required: false, label: false, :input_html => {:style=> 'width: 465px'}%>
-            <%= f.button :submit %>
-            <% end %>
+            <%= render "partial/tweetform" %>
             <br><br>
             <hr>
             <% @tweets.each do |f| %>
+            <div class ="messagetime">
+            <%= f.created_at %>
+            <%= link_to 'X', tweet_path(f), method: :delete, data: { confirm: 'Are you sure?'}, class: 'messagedelete' %>
+            </div>
             <%= f.message %>
-
-            <%= link_to 'x', tweet_path(f), method: :delete, data: { confirm: 'Are you sure?'}, class: 'messagedelete' %>
             <hr>
             <% end %>
           </div>
