--- a/app/views/tweets/home.html.erb
+++ b/app/views/tweets/home.html.erb
@@ -77,7 +77,17 @@
       <div class="card">
         <div class="card-body">
           <h4 class="card-title">Who to follow</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">
+              <% @users.each do |user| %>
+                <%= link_to user.name, user_path(user) %>
+                <% if current_user.following?(user) %>
+                  <%= render partial: "unfollow", locals: { user: user }  %>
+                <% else %>
+                   <%= render partial: "follow", locals: { user: user } %>
+                <% end %>
+              <% end %>
+
+            </p>
           </div>
         </div>
     </div>
