--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,9 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+
+    <%= f.input :avatar, as: :file %>
+
     <%= f.input :name, required: true, autofocus: true %>
     <%= f.input :bio, autofocus: true %>
     <%= f.input :birthday, as: :date, start_year: Date.today.year - 90, end_year: Date.today.year - 12, order: [:day, :month, :year] %>
