--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,97 @@
-<%= @user.name %><br>
-<%= @user.birthday %><br>
-<%= @user.bio %><br>
-<%= @user.country %><br>
+
+<body class="home">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav mr-auto">
+  <li class="nav-item active">
+    <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">About</a>
+  </li>
+</ul>
+
+<form class="form-inline my-2 my-lg-0">
+  <%= notice %>
+  <%= alert %>
+  <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+  <div class="dropdown">
+    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Language
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" href="#">English</a>
+      <a class="dropdown-item" href="#">Chinese</a>
+      <a class="dropdown-item" href="#">Bla Bla</a>
+    </div>
+  </div>
+</form>
+</div>
+</nav>
+
 <br>
 
-<% @tweets.each do |f| %>
-<%= f.created_at %><br>
-<%= f.message %><br>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <div class="card-style">
+        <div class="card-body">
+          <h4 class="card-title username-style"><%= @user.name %></h4>
+          <p class="card-text">
+            <%= @user.birthday %><br>
+            <%= @user.bio %><br>
+            <img src="/assets/location-pointer.svg" height="15" width="15">
+            <%= @user.country %></img>
+            <br><br>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-6">
+      <div class="align-items-center centerblock">
+        <div class="card">
+          <div class="card-body">
+
+            <hr>
+            <% @tweets.each do |f| %>
+            <div class ="messagetime">
+            <%= f.created_at %>
+            </div>
+            <%= f.message %>
+            <hr>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">Who to follow</h4>
+            <p class="card-text">
+
+            </p>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="row">
+  <div class="col-4 col-sm-2">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Who to follow</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+  </div>
+</div> -->
