--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,46 +7,54 @@
 </button>
 
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav mr-auto">
+<ul class="navbar-nav">
   <li class="nav-item active">
     <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">About</a>
-  </li>
 </ul>
+
+<div class="mx-auto">
+<%=image_tag("Twitter.png", height: '32', width: '32')%>
+</div>
 
 <form class="form-inline my-2 my-lg-0">
   <%= notice %>
   <%= alert %>
   <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-  <div class="dropdown">
-    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Language
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="#">English</a>
-      <a class="dropdown-item" href="#">Chinese</a>
-      <a class="dropdown-item" href="#">Bla Bla</a>
-    </div>
-  </div>
 </form>
 </div>
 </nav>
-
+<br>
+<br>
 <br>
 
 <div class="container">
   <div class="row">
     <div class="col-3">
       <div class="card-style">
-        <div class="card-body">
-          <h4 class="card-title username-style"><%= @user.name %></h4>
-          <p class="card-text">
+        <div class="card-body text-center">
+          <%= image_tag @user.avatar.url, :class => "img-fluid img" %>
+          <h4 class="card-title username-style"><br><%= @user.name %></h4>
+          <p class="card-text ">
             <%= @user.birthday %><br>
             <%= @user.bio %><br>
             <img src="/assets/location-pointer.svg" height="15" width="15">
             <%= @user.country %></img>
+            <div class="stats">
+               <a>Tweets
+                <strong id="following" class="stat">
+                  <%= @user.tweets.count %>
+                </strong></a>
+                <a>Following
+                  <strong id="following" class="stat">
+                    <%= @user.followeds.count %>
+                  </strong>
+                </a>
+                  <a>Followers
+                  <strong id="followers" class="stat">
+                    <%= @user.followers.count %>
+                  </strong></a>
+              </div>
             <br><br>
           </p>
         </div>
@@ -55,16 +63,18 @@
 
     <div class="col-6">
       <div class="align-items-center centerblock">
-        <div class="card">
+        <div class="card othertable">
           <div class="card-body">
 
             <hr>
             <% @tweets.each do |f| %>
-            <div class ="messagetime">
-            <%= f.created_at %>
-            </div>
+            <div class="info">
+            <%= image_tag @user.avatar.url, :class => "img-fluid thumbnail"%>
+            <b><%= @user.name %> </b>
+            <%= f.created_at.strftime(" %d %B")  %><br>
             <%= f.message %>
             <hr>
+            </div>
             <% end %>
           </div>
         </div>
@@ -76,6 +86,7 @@
         <div class="card-body">
           <h4 class="card-title">Who to follow</h4>
             <p class="card-text">
+
 
             </p>
           </div>
